fix revoke for local repos
